# example-service

./: .copilot-instructions.md  .dockerignore  .env.example  .github_workflows_validate-workflows.yml  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .yamllint.yml  CLOSURE_ANNOUNCEMENT.md  CODEOWNERS  CONTRIBUTING.md  COPILOT_INSTRUCTIONS.md  CTO_IMPLEMENTATION_REPORT.md  CTO_PHASE2_REPORT.md  Dockerfile  ENVIRONMENT_SETUP.md  EVIDENCE_CHAIN.md  Makefile  ORG_REPO_REPORT.md  PHASE3_INSTRUCTIONS.md  PHASE3_REPORT.md  PHASE4_PLAN.ADDENDUM.md  PHASE4_PLAN.md  PHASE4_REPORT.md  PHASED_IMPLEMENTATION.md  PROMOTION_NOTES.md  PR_SUMMARY.md  README.md  ROTATION.md  SECURITY.md  SPRINT3_PREP.md  alerts.yaml  apply_fixes.py  bootstrap-local-mesh.sh  ci_run_17750378058_report.md  gen_installation_token.py  generator  org-config.yaml  patch_src_application_main.py  patch_tests_contract_test_contract_ping.py  (+6 more)
.githooks/: pre-push
.github/: INCIDENT_TEMPLATE.md  branch_protection_runbook.md  ci_retrigger_branch_fix.txt  ci_retrigger_codeql.txt  ci_retrigger_fixed_yaml.txt  ci_retrigger_fixes.txt  ci_retrigger_format.txt  ci_retrigger_reopened.txt  ci_retrigger_sast.txt  ci_retrigger_sbom.txt  ci_retrigger_sbom2.txt  ci_touch.txt  ci_touch2.txt  ci_trigger_touch2.txt  dependabot.yml
audit/: README.md  enforce-retention.sh  metrics-baseline.json  metrics-baseline.json.sha256  run-index.md  store-evidence.sh  verify-chain.sh
charts/: global-values.yaml
context/: tools_status.txt  vault_status.json
docs/: broken_ping_service.md  ping_endpoint.md  sprint6_plan.md  (+2 more)
(+291 files in other folders)
